[gd_scene load_steps=5 format=3 uid="uid://53qha6ha423j"]

[ext_resource type="Script" uid="uid://g3nja6tp7gka" path="res://scripts/DiceChoice/DiceChoice.gd" id="1_spkjh"]
[ext_resource type="Script" uid="uid://tr3mbntjyjdo" path="res://scripts/DiceChoice/ChooseDieConfirm.gd" id="2_beqxm"]
[ext_resource type="Script" uid="uid://dhfdstwga2bhh" path="res://scripts/DiceGrid.gd" id="2_kljac"]
[ext_resource type="PackedScene" uid="uid://dupfms6m2gsoy" path="res://scenes/DebugScene.tscn" id="4_j6ckn"]

[node name="DieChoiceUI" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_spkjh")

[node name="DiceGridScroll" type="ScrollContainer" parent="."]
clip_contents = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.486
anchor_top = 0.064
anchor_right = 1.012
anchor_bottom = 0.626
offset_left = 8.94202
offset_top = 3.24
offset_right = -0.236084
offset_bottom = -0.0900269

[node name="DiceGrid" type="GridContainer" parent="DiceGridScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4
script = ExtResource("2_kljac")

[node name="DiceGridLabel" type="RichTextLabel" parent="."]
layout_mode = 2
anchor_left = 0.38
anchor_right = 0.38
anchor_bottom = 0.09
offset_left = 0.23996
offset_top = -1.0
offset_right = 706.24
offset_bottom = -0.320004
text = "Choose a die to add to your bag:"

[node name="DieFaceGrid" type="GridContainer" parent="."]
layout_mode = 2
anchor_top = 0.049
anchor_right = 0.405
anchor_bottom = 0.966
offset_left = 1.0
offset_top = 0.215002
offset_right = 0.284973
offset_bottom = -0.189941
columns = 3

[node name="ChooseDie" type="Control" parent="."]
layout_mode = 1
anchor_left = 0.253
anchor_top = 0.511
anchor_right = 0.736
anchor_bottom = 1.002
offset_left = -0.0590515
offset_top = -0.046051
offset_right = 0.191956
offset_bottom = 0.0700073
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("2_beqxm")

[node name="ChooseDieButton" type="Button" parent="ChooseDie"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -47.5
offset_top = -31.0
offset_right = 47.5
grow_horizontal = 2
grow_vertical = 0
text = "Choose Die"

[node name="ChooseDieConfirm" type="ConfirmationDialog" parent="ChooseDie"]
title = "ChooseDieConfirm"
initial_position = 1
size = Vector2i(211, 100)
borderless = true
ok_button_text = "YES"
dialog_text = "ROLL WITH THIS CHOICE?"
cancel_button_text = "NO"

[node name="DebugControls" parent="." instance=ExtResource("4_j6ckn")]
layout_mode = 1
